syntax = "proto3";
import "google/protobuf/wrappers.proto";
package Elsa.Runtime.ProtoActor.Messages;
option csharp_namespace = "Elsa.Runtime.Protos";

// Empty response type.
message Unit {}

message StartWorkflowRequest {
  string definitionId = 1;
  string versionOptions = 2;
  optional string correlationId = 3;
  optional Input input = 4;
}

message StartWorkflowResponse {
  bool NotFound = 1;
  bool Finished = 2;
}

message ResumeWorkflowRequest {
  string instanceId = 1;
  string bookmarkId = 2;
  optional Input input = 3;
}

message ResumeWorkflowResponse {
  ResumeWorkflowStatus Status = 1;
}

enum ResumeWorkflowStatus {
  Finished = 0;
  Suspended = 1;
  BookmarkNotFound = 2;
}

message StoreBookmarkRequest {
  string WorkflowInstanceId = 1;
  string BookmarkId = 2;
}

message RemoveBookmarkRequest {
  string BookmarkId = 1;
}

message ResolveBookmarkRequest {
}

message ResolveBookmarkResponse {
  repeated StoredBookmark Bookmarks = 1;
}

message StoredBookmark {
  string WorkflowInstanceId = 1;
  string BookmarkId = 2;
}

message Json {
  string text = 1;
}

message Input {
  map<string, Json> Data = 1;
}